--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <div width=100% display="box">
                 <h3>Resultados</h3>
             </div>
-            <table id="results-table">
+            <!--<table id="results-table">
                 <thead>
                     <tr>
                         <th>
@@ -44,11 +44,12 @@
                             Ação
                         </th>
                     </tr>
+
                 </thead>
                 <tbody id="table-body">
                     
                 </tbody>
-            </table>
+            </table>-->
         </div>
 
     </section>
